# whatsapp-bot-clinica-exames

./: .env.example  .gitignore  =0.3.0  README.md  clinica_bot.sqlite-shm  clinica_bot.sqlite-wal  docker-compose.yml  próximos passos.txt  pyproject.toml  requirements.txt
.claude/: settings.local.json
app/: config.py  main.py
app/agent/: graph.py  state.py
app/agent/nodes/: classify.py  fallback.py  faq.py  handoff.py  resultado.py  scheduling.py
app/api/: webhook.py
app/rag/: loader.py  vectorstore.py
app/services/: evolution.py
docs/: clinica_info.txt
tests/: test_webhook.py
